syntax = "proto3";

option csharp_namespace = "Itmo.Bebriki.Agreement.Contracts";

package itmo.bebriki.agreements;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "enums.proto";

service AgreementService {
  rpc QueryAgreements (QueryAgreementRequest) returns (QueryAgreementResponse);

  rpc ApproveAgreement (ApproveAgreementRequest) returns (ApproveAgreementResponse);

  rpc RejectAgreement (RejectAgreementRequest) returns (RejectAgreementResponse);
}

message QueryAgreementRequest {
  repeated int64 agreement_ids = 1;
  repeated int64 job_task_ids = 2;
  repeated JobTaskState states = 3;
  repeated int64 assignee_ids = 4;
  google.protobuf.Timestamp from_deadline = 5;
  google.protobuf.Timestamp to_deadline = 6;
  google.protobuf.Timestamp from_created_at = 7;
  google.protobuf.Timestamp to_created_at = 8;
  google.protobuf.Int64Value cursor = 9;
  int32 page_size = 10;
}

message ApproveAgreementRequest {
  int64 agreement_id = 1;
}

message RejectAgreementRequest {
  int64 agreement_id = 1;
}

message QueryAgreementResponse {
  google.protobuf.Int64Value cursor = 1;
  repeated AgreementDto agreements = 2;
}

message ApproveAgreementResponse { }

message RejectAgreementResponse { }

message AgreementDto {
  int64 agreement_id = 1;
  int64 job_task_id = 2;
  JobTaskState state = 3;
  google.protobuf.Int64Value assignee_id = 4;
  google.protobuf.Timestamp deadline = 5;
  google.protobuf.Timestamp created_at = 6;
}

